--- a/standart.html
+++ b/standart.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="fonts/Icon-font-7-stroke-PIXEDEN-v-1.2.0/pe-icon-7-stroke/css/pe-icon-7-stroke.css">
 
 </head>
-<body>&#8226
+<body>
 	<div class="container">
 		<header>
 			<div class="navigation">
