stable version for google chrome(all pages)

--- a/postSingle.html
+++ b/postSingle.html
@@ -192,6 +192,7 @@
 							<input id="name" type="text" placeholder="Your name (required)" required>
 							<input id="email" type="email" placeholder="Your e-mail (required)" required>
 							<textarea placeholder="Your comment (required)" name="" id="" cols="30" rows="10" required></textarea>
+							<input type="submit" name="submit" value="POST COMMENT">
 						</form>
 						
 				</div>
@@ -207,7 +208,7 @@
 						<li class="recent-one">
 							<section >
 								<i class="fa fa-file-text-o" aria-hidden="true"></i>
-								<span>Dailya Inspiration</span>	
+								<span>Daily Inspiration</span>	
 							</section>
 							<time>October 20, <span class="year">2015</span></time>
 						</li>
