--- a/standart.html
+++ b/standart.html
@@ -71,33 +71,7 @@
 					<article>
 						<h4>WHAT MAKES A BRAND SUCCESS?</h4>
 						<span>
-							<span class="line1">The</span>
-							<span class="line2">European</span>
-							<span class="line3">languages</span>
-							<span class="line4">are</span>
-							<span class="line5"> members </span>
-							<span class="line6">of </span>
-							<span class="line7">the </span>
-							<span class="line8">same </span>
-							<span class="line9">family. </span>
-							<span class="line10">Their </span>
-							<span class="line11">separate </span>
-							<span class="line12">existence </span>
-							<span class="line13">is </span>
-							<span class="line14">a </span>
-							<span class="line15">myth. </span>
-							<span class="line16">The <br></span>
-							<span class="line17">languages </span>
-							<span class="line18">only </span>
-							<span class="line19">differ </span>
-							<span class="line20">in</span>
-							<span class="line21"> their </span>
-							<span class="line22">grammar, </span>
-							<span class="line23">their </span>
-							<span class="line24">pronunciation </span>
-							<span class="line25">and </span>
-							<span class="line26">their.</span>
-							   
+							The European languages are members of the same family. Their separate existence is a myth. The languages only differ in their grammar, their pronunciation and their.
 						</span>
 						 <a href="">CONTINUE READING</a> 
 					</article>
